# vk_project

./: README.md
vk_project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
vk_project_server/: CMakeLists.txt  server.cpp  server.h
